tests/bad/let-generic.q
fun main () : qubit<'a> =
    let (x : qubit<'a>) = qinit () in x
